Manifest_Files/trainbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainbook-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trainbook-app
  template:
    metadata:
      labels:
        app: trainbook-app
    spec:
      containers:
      - name: trainbook-app
        image: ghcr.io/godfrey22152/trainbook-app@sha256:8f3bad4514451378ef180bce0975aaa31af6ee3b85237de69df8faa96a433ce0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: regcred  # Secret to pull image from private registry
