Manifest_Files/trainbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trainbook-service
spec:
  selector:
    app: trainbook-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
